...
            android:text="username: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/signup_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here">
        </EditText>

    </LinearLayout>
...
            android:text="password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/signup_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password Here">
        </EditText>

...
            android:text="confirm\npassword: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/signup_confirm_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="70dp"
            android:hint="Enter Password Here">
        </EditText>

...
            android:textColor="#000000">
        </TextView>

        <Spinner
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:id="@+id/account_type_spinner"
            android:layout_gravity="center">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

...
            android:text="admin password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/admin_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:hint="Enter Admin Password">
        </EditText>
...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textSize="20sp"
            android:textColor="#ffffff"
...
