<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="30dp"
        android:textColor="#fc0303">
    </TextView>

    <Button
        android:id="@+id/create_review_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Create Review"
        android:textSize="20sp"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/or_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="- OR -"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="#fc0303">
    </TextView>
    <Button
        android:id="@+id/create_playlist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="Create Playlist"
        android:textSize="20sp"
        android:textColor="#ffffff"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:id="@+id/bottom_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/home_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textSize="9sp" />

        <Button
            android:id="@+id/music_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Music"
            android:textSize="9sp" />

        <Button
            android:id="@+id/create_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Create"
            android:textSize="9sp" />

        <Button
            android:id="@+id/jams_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Jams"
            android:textSize="9sp" />

        <Button
            android:id="@+id/profile_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="9sp" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>