...
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="Back"
...
            android:text="Song Name:      "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/song_name_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Song Name">
        </EditText>
    </LinearLayout>
    <LinearLayout
...
            android:text="Artist Name:      "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/arist_name_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Artist Name">
        </EditText>
    </LinearLayout>
    <LinearLayout
...
            android:text="Rating out of 5:   "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/rating_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Rating">
        </EditText>
    </LinearLayout>
    <LinearLayout
...
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:hint="Enter Description">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="Submit"
        android:textSize="20sp"
...
